Final changes added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         name="alarm" type="datetime-local" class="input">
                     </form>
                     <button class="set" onclick="setAlarm()">Set Alarm</button>
-                    <button class="clear">Clear</button>
+                    <button class="clear" onclick="clearAll()">Clear</button>
                 </div>
             </div>
         </main>
