--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@200;400;600&display=swap" >
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;600&family=Martian+Mono:wght@200;400;600&display=swap" >
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora&display=swap" >
         <link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" >
